static/stax/styles.css
.stack-list {
    list-style-type: none;
    font-size: 8pt;
    text-align: center;
    display: inline-block;
}

.node-maker li, .stack-node, .stack-base, .stack-leaf {
    border-top-left-radius: 12px;
    border-top-right-radius: 12px;
}

.node-maker li {
    cursor: move;
}

.stack-layer {
    display: inline-block;
    white-space: nowrap;
}

.node-maker li, .stack-node, .stack-leaf {
    padding: 5px;
    border: solid 2px black;
    background-color: #5487FF;
    border-bottom: hidden;
}

.stack-base {
    background-color: #DEDEDE;
    padding: 7px;
}

.stack-leaf {
    display: block;
}

.stack-leaf-text {
}

.stack-node-text {
}

.stack-base-text {
}

.stack-base-text input {
    display: inline-block;
}

.add-stack-toolbar {
    background-color: #C4C4C4;
    position: fixed;
    top: 0px;
    left: 0px;
    z-index: 42;
}

#stack-display {
    position: relative;
    top: 30px;
}

.stack-controls, .leaf-controls {
    visibility: hidden;
    display: inline-block;
    /* float: right; */
    cursor: pointer;
}

.stack-controls:hover, .leaf-controls:hover {
    visibility: visible;
}

.control-button {
    display: block;
}

.stack-base:hover .stack-controls, .stack-leaf:hover .leaf-controls {
    visibility: visible;
}

